traversal.diagonal.traversaldiagonal.TraversalDiagonal.scala.error
Compilation error:
TraversalDiagonal:38: error: ')' expected but '<-' found.
    if (diagc<-4) {setPos(0,diag)}
             ^TraversalDiagonal:43: error: illegal start of simple expression
}
^